My first changes to HTML code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <body>
 
 <h1>My First Heading</h1>
+  <h2>My secon heading</h2>
+ 
 <p>My first paragraph.</p>
-
+  <p>Otrā rinkopā</p>
+  
 </body>
 </html>
