Second link is added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <p>Otrā rinkopā</p>
   <p><a href="button.html">Click Here!</a></p>
   
+<p><a href="https://unsplash.com">Apmeklē Dobeles 1.vidusskolas majaslapu</a></p>
+  
 </body>
 </html>
